sass/main.sass
%font
  font:
    family: 'Fira Code'
    size: medium
    weight: 500

body
  @extend %font
  margin: 0
  --margin-size: 0.25em
  --border-width: 0.1em
  --setting-spacing: 1.25em

canvas
  background-color: transparent
  position: absolute

ul
  list-style: none
  margin: 0
  padding: 0

button
  cursor: pointer
  padding: 0
  border: 0

  &:focus
    outline: none

input[type="number"]
  @extend %font
  width: 5em
  margin:
    left: 0.5em
    right: 0.15em
  text-align: right
  border:
    width: 1px
    style: solid
    color: black
    radius: 0.25em

  -moz-appearance: textfield

  &::-webkit-inner-spin-button,
  &::-webkit-outer-spin-button
    -webkit-appearance: none

  &:focus
    outline: none

  &:invalid
    border-color: red


.app
  display: flex


%canvas-position
  position: absolute
  left: var(--margin-size)
  top: var(--margin-size)

.canvases
  @extend %canvas-position
  padding: var(--border-width)
  overflow: visible

.simulation
  border: solid var(--border-width) black
  margin: var(--margin-size)
  flex:
    shrink: 0
    grow: 0

.controls
  display: flex
  justify-content: space-between
  align-items: center
  border-top: solid var(--border-width) black
  height: 5em
  padding: 0 2em 0 2em

  & > div
    display: flex
    flex-direction: column
    align-items: center


%playpause
  background: transparent
  box-sizing: border-box
  height: 3.75em
  border-color: transparent transparent transparent black
  transition: 100ms border-width ease

  &:hover
    transform: scale(1.1)

.play
  @extend %playpause
  border:
    style: solid
    width: 1.85em 0 1.85em 3em

.pause
  @extend %playpause
  border:
    style: double
    width: 0 0 0 3em


.jump
  background: url('../public/jump.svg') no-repeat
  width: 10em
  height: 3.5em
  background:
    position: center
    size: 9em 3em

  &:hover
    background-size: 9.75em 4em
    opacity: 0.75


.reset
  background: url('../public/reset.svg') no-repeat
  width: 5.5em
  height: 5.5em
  background:
    position: center
    size: 4.5em 4.5em

  &:hover
    background-size: 5em 5em
    opacity: 0.75


.telemetry
  @extend %canvas-position
  margin: var(--margin-size)
  
  & > summary
    margin-left: 0.25em
    cursor: pointer

    &:hover
      transform: scale(1.1)

  & > table
    & > tbody
      & > tr
        & > td
          &:nth-child(2)
            text-align: right

  
.checkbox
  cursor: pointer

  & > input
    cursor: pointer

.tooltip
  border-bottom: 0.1em dashed #999
  text-decoration: none

.settings
  display: flex
  justify-content: space-between
  margin: var(--margin-size)
  margin-bottom: calc(var(--margin-size) + var(--setting-spacing))

  & > ul
    margin-right: 0.5em

    & > li
      margin-top: var(--setting-spacing)


@media (min-width: 1320px)
  .app
    flex-flow: row

  .settings
    flex-flow: column

@media (max-width: 1319px)
  .app
    flex-flow: column

  .settings
    flex-flow: row


footer
  display: flex
  height: 5em
  justify-content: space-evenly
  margin-top: 5em
  border-top: solid var(--border-width)

  & > span
    align-self: center

  & > a
    display: flex
    align-items: center

  & img
    margin-left: 0.5em
    width: 2em
    height: 2em

